v 2.0.3
	Fix to ensure person associated with relationship
	Fix display of locations when not found and enhance location editor
	Change to date handling
	Update dojo version
	Fix deleting a person
	Fix error handling in upgrade-1.4.2-2.0.0.php
v 2.0.2
	Fix install script
	Fix numerous strict php warnings and switch off strict reporting to screen
	Fix locations not being saved
	Numerous gedcom changes thanks to richardbrinegar
	Add link to export all gedcom
v 2.0.0
	Massive refactoring exercise
		Introduces classes and modules
		
	Fix for MySQL 5 (probably still compatible with MySQL 4)
	Add links to insert father, mother and children from person.php
	Enable editing of whole household on census edit page
	Move configuration to database and database.inc.php
	Editing for image and transcript descriptions
	Consistent display of names
	Includes ancestor and descendant trees from Kees
	RSS feed of 20 latest changes
	People drop down changed to search box when dojo used
	Add dissolve date to marriage form
	Layout configurable via admin page to get dojo panes or tabs
	Don't show name for restricted people
	Name now split into 5 fields
	All places, addresses etc now held in location table
	Most information now held in the event table (in conjunction with the attendee table)
	Possible to record information about father at birth and parents at marriage
	Change mail.php to send from email address in config
		Stops mail being blocked when server filters send address
	Add locations page linked from index.php
		Slow, especially the first time while the latitude and longitude of locations
		are being looked up
		Google maps shown if key entered on admin page, otherwise list
	Various reports on missing info linked from index.php
	Documents and images directory now configurable (relative paths) and can be placed outside the document root
	Top 10 most common surnames on front page and counts included on surname index page
	Images and transcripts linked to events